--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
 		<meta name="author" content="" />
-		<title>Readam</title>
+		<title>Open Parking Manager</title>
 
 		<!-- Facebook and Twitter integration -->
 		<meta property="og:title" content="" />
